--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,17 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>io.hgfdodo</groupId>
+    <groupId>io.hgfkeep</groupId>
     <artifactId>k8sclient</artifactId>
     <version>0.1.0</version>
+
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub Packages</name>
+            <url>https://maven.pkg.github.com/hgfkeep/k8sclient</url>
+        </repository>
+    </distributionManagement>
 
     <build>
         <plugins>
