--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
             <id>github</id>
             <name>GitHub Packages</name>
             <url>https://maven.pkg.github.com/hgfkeep/k8sclient</url>
+            <layout>default</layout>
         </repository>
     </distributionManagement>
 
