--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -27,6 +27,6 @@ jobs:
       with:
         java-version: 1.8
     - name: Publish package
-      run: mvn -B deploy -X
+      run: mvn -B deploy
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
