--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,24 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>win.hgfdodo</groupId>
     <artifactId>k8sclient</artifactId>
-    <version>0.1.3</version>
+    <version>0.1.6</version>
+    <name>kubernetes java client</name>
+    <description>kubernetes java client with metrics api</description>
+    <url>https://github.com/hgfkeep/k8s-java-client</url>
+
+    <developers>
+        <developer>
+            <name>Guangfu He</name>
+            <email>hgfkeep@gmail.com</email>
+            <url>https://github.com/hgfkeep</url>
+        </developer>
+    </developers>
+    <scm>
+        <connection>hgfkeep@gmail.com</connection>
+        <url>https://github.com/hgfkeep/k8s-java-client</url>
+        <developerConnection>https://github.com/hgfkeep/k8s-java-client</developerConnection>
+    </scm>
+
 
     <distributionManagement>
         <repository>
@@ -15,6 +32,20 @@
             <layout>default</layout>
         </repository>
     </distributionManagement>
+
+    <profiles>
+        <profile>
+            <id>default</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+                <jdk>[1.8, )</jdk>
+            </activation>
+            <properties>
+                <!--                <additionalparam>-Xdoclint:none</additionalparam>-->
+                <doclint>none</doclint>
+            </properties>
+        </profile>
+    </profiles>
 
     <build>
         <plugins>
@@ -117,28 +148,29 @@
                     </execution>
                 </executions>
             </plugin>
-<!--            <plugin>-->
-<!--                <groupId>org.apache.maven.plugins</groupId>-->
-<!--                <artifactId>maven-javadoc-plugin</artifactId>-->
-<!--                <version>2.10.4</version>-->
-<!--                <executions>-->
-<!--                    <execution>-->
-<!--                        <id>attach-javadocs</id>-->
-<!--                        <goals>-->
-<!--                            <goal>jar</goal>-->
-<!--                        </goals>-->
-<!--                    </execution>-->
-<!--                </executions>-->
-<!--                <configuration>-->
-<!--                    <tags>-->
-<!--                        <tag>-->
-<!--                            <name>http.response.details</name>-->
-<!--                            <placement>a</placement>-->
-<!--                            <head>Http Response Details:</head>-->
-<!--                        </tag>-->
-<!--                    </tags>-->
-<!--                </configuration>-->
-<!--            </plugin>-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <!-- this version need JAVA_HOME as ENV-->
+                <version>3.0.1</version>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <tags>
+                        <tag>
+                            <name>http.response.details</name>
+                            <placement>a</placement>
+                            <head>Http Response Details:</head>
+                        </tag>
+                    </tags>
+                </configuration>
+            </plugin>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -242,7 +274,7 @@
         </dependency>
     </dependencies>
     <properties>
-        <java.version>1.7</java.version>
+        <java.version>1.8</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <gson-fire-version>1.8.3</gson-fire-version>
@@ -257,5 +289,13 @@
         <junit-version>4.12</junit-version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>actable</distribution>
+        </license>
+    </licenses>
 
 </project>
