--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>win.hgfdodo</groupId>
     <artifactId>k8sclient</artifactId>
-    <version>0.1.3</version>
+    <version>0.1.6</version>
 
     <distributionManagement>
         <repository>
@@ -15,6 +15,20 @@
             <layout>default</layout>
         </repository>
     </distributionManagement>
+
+    <profiles>
+        <profile>
+            <id>default</id>
+            <activation>
+                <jdk>[1.8,)</jdk>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>
+                <!-- for maven-doc-plugin 2.X <additionalparam>-Xdoclint:none</additionalparam>-->
+                <doclint>none</doclint>
+            </properties>
+        </profile>
+    </profiles>
 
     <build>
         <plugins>
@@ -117,28 +131,28 @@
                     </execution>
                 </executions>
             </plugin>
-<!--            <plugin>-->
-<!--                <groupId>org.apache.maven.plugins</groupId>-->
-<!--                <artifactId>maven-javadoc-plugin</artifactId>-->
-<!--                <version>2.10.4</version>-->
-<!--                <executions>-->
-<!--                    <execution>-->
-<!--                        <id>attach-javadocs</id>-->
-<!--                        <goals>-->
-<!--                            <goal>jar</goal>-->
-<!--                        </goals>-->
-<!--                    </execution>-->
-<!--                </executions>-->
-<!--                <configuration>-->
-<!--                    <tags>-->
-<!--                        <tag>-->
-<!--                            <name>http.response.details</name>-->
-<!--                            <placement>a</placement>-->
-<!--                            <head>Http Response Details:</head>-->
-<!--                        </tag>-->
-<!--                    </tags>-->
-<!--                </configuration>-->
-<!--            </plugin>-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.0.1</version>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <tags>
+                        <tag>
+                            <name>http.response.details</name>
+                            <placement>a</placement>
+                            <head>Http Response Details:</head>
+                        </tag>
+                    </tags>
+                </configuration>
+            </plugin>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
