--- a/.github/workflows/profiles.yml
+++ b/.github/workflows/profiles.yml
@@ -6,9 +6,9 @@ name: maven central
 # events but only for the master branch
 on:
   push:
-    branches: [ test ]
+    branches: [ dev ]
   pull_request:
-    branches: [ test ]
+    branches: [ dev ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
