--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 
     <distributionManagement>
         <repository>
-            <id>ossrh</id>
+            <id>OSSRH</id>
             <name>Releases</name>
             <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
             <layout>default</layout>
